# notify-bridge

./: .gitignore  PUBLISH.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/notify_bridge/: __init__.py  discord.py  telegram.py
tests/: test_discord.py  test_telegram.py
