[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "awesome-notify-bridge"
version = "0.1.5"
description = "Reusable Telegram and Discord notification helpers"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "AFATAW Team" }]
keywords = ["discord", "notifications", "telegram", "webhook"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Communications :: Chat",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
  "build>=1.2.2",
  "pytest>=8.3.0",
  "twine>=5.1.1",
]

[project.urls]
Homepage = "https://github.com/trunghvbk-afataw/notify-bridge"
Repository = "https://github.com/trunghvbk-afataw/notify-bridge"
Issues = "https://github.com/trunghvbk-afataw/notify-bridge/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
